@@ -4,17 +4,15 @@ db = MonetDB.new
 db.connect(user = "monetdb", passwd = "monetdb", lang = "sql", host="127.0.0.1", port = 50000, db_name = "demo", auth_type = "SHA1")
 
 # set type_cast=true to enable MonetDB to Ruby type mapping
-res = db.query("SELECT * from tables;", type_cast = false)
+res = db.query("SELECT * from test;", type_cast = false)
 
 #puts res.debug_columns_type
 
 puts "Number of rows returned: " + res.num_rows.to_s
 puts "Number of fields: " + res.num_fields.to_s
 
-
 # Get the columns' name
 #col_names = res.name_fields
-
 
 ###### Fetch all rows and store them
 #puts res.fetch_all
